/*
 * Copyright 2022 Google LLC
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    https://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package deviceinfra.api.deviceinfo;

import "src/devtools/deviceinfra/api/deviceinfo/proto/device_type.proto";
import "src/devtools/deviceinfra/api/deviceinfo/proto/platform/android/android_real_device_info.proto";

option java_package = "com.google.devtools.deviceinfra.api.deviceinfo.proto";
option java_outer_classname = "DeviceInfoProto";

// Device detailed information generated by devie manager.
message DeviceInfo {
  // REQUIRED
  // Device type.
  DeviceType device_type = 1;

  // REQUIRED
  // Detailed information.
  oneof device_info {
    deviceinfra.api.deviceinfo.platform.android.AndroidRealDeviceInfo
        android_real_device_info = 2;
  }
}
