/*
 * Copyright 2022 Google LLC
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    https://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package mobileharness.infra.client.longrunningservice;

import "google/protobuf/field_mask.proto";
import "src/devtools/mobileharness/infra/client/longrunningservice/proto/session.proto";

option java_package = "com.google.devtools.mobileharness.infra.client.longrunningservice.proto";
option java_outer_classname = "SessionServiceProto";

// Session service for submitting and running sessions. A session contains
// multiple OmniLab jobs.
service SessionService {
  // Creates a session and returns immediately.
  rpc CreateSession(CreateSessionRequest) returns (CreateSessionResponse);

  // Creates a session and returns when the session finishes.
  rpc RunSession(RunSessionRequest) returns (RunSessionResponse);

  // Gets information of a session.
  rpc GetSession(GetSessionRequest) returns (GetSessionResponse);

  // Gets information of all pending/running/archived sessions.
  rpc GetAllSessions(GetAllSessionsRequest) returns (GetAllSessionsResponse);
}

message CreateSessionRequest {
  // Required.
  SessionConfig session_config = 1;
}

message CreateSessionResponse {
  // Required.
  SessionId session_id = 1;
}

message RunSessionRequest {
  // Required.
  SessionConfig session_config = 1;
}

message RunSessionResponse {
  // Required.
  SessionDetail session_detail = 1;
}

message GetSessionRequest {
  // Required.
  SessionId session_id = 1;

  // Optional.
  //
  // Field mask of GetSessionResponse.
  //
  // For example, a mask ["session_detail.session_status"] makes the response
  // only contains SessionStatus.
  //
  // If not present, the response contains all fields.
  //
  // Note that a repeated field is allowed ONLY IF it is the LAST item in a
  // path.
  google.protobuf.FieldMask field_mask = 2;
}

message GetSessionResponse {
  // Required.
  SessionDetail session_detail = 1;
}

message GetAllSessionsRequest {
  // Optional.
  //
  // Field mask of SessionDetail.
  //
  // For example, a mask ["session_status"] makes all SessionDetail in the
  // response only contain SessionStatus.
  //
  // If not present, SessionDetail in the response contains all fields.
  //
  // Note that a repeated field is allowed ONLY IF it is the LAST item in a
  // path.
  google.protobuf.FieldMask session_detail_field_mask = 1;

  // Optional.
  SessionFilter session_filter = 2;
}

message GetAllSessionsResponse {
  // Required.
  repeated SessionDetail session_detail = 1;
}

message SessionFilter {
  // Optional.
  //
  // Matches SessionDetail.session_config.session_name of sessions.
  //
  // An invalid regex will be treated as not present.
  string session_name_regex = 1;

  // Optional.
  //
  // Matches SessionDetail.session_status.name() of sessions.
  //
  // An invalid regex will be treated as not present.
  string session_status_name_regex = 2;
}
